Colaboratory kullanılarak oluşturuldu

--- a/Errors_Exceptions_Handling.ipynb
+++ b/Errors_Exceptions_Handling.ipynb
@@ -20,7 +20,7 @@
       "version": "3.8.2"
     },
     "colab": {
-      "name": "ElifÖzgeOlgaç-Errors_Exceptions_Handling.ipynb",
+      "name": "ElifÖzgeOlgaç-Errors_Exceptions_Handling.ipynb adlı not defterinin kopyası",
       "provenance": [],
       "include_colab_link": true
     }
@@ -62,20 +62,7 @@
         "    division(x)\n",
         "\n",
         "except ZeroDivisionError:\n",
-        "    print(\"Please check denominator\")\n",
-        "\n",
-        "\n",
-        "\"\"\"\n",
-        "payda 0dan farklı iken sonucu yazdırmak için bu yolu mu kullanmalıyım?\n",
-        "\n",
-        "def division(x):\n",
-        "    try:\n",
-        "        return(x/5)\n",
-        "    except ZeroDivisionError:\n",
-        "        print(\"Please check denominator\")\n",
-        "            \n",
-        "division(x=int(input(\"Enter a number: \")))\n",
-        "\"\"\""
+        "    print(\"Please check denominator\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -116,7 +103,7 @@
         "except ValueError:\n",
         "    print(\"Please enter a number only!\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
