--- a/1-Python For Everyone/Lists.ipynb
+++ b/1-Python For Everyone/Lists.ipynb
@@ -20,23 +20,12 @@
       "version": "3.8.7"
     },
     "colab": {
-      "name": "ElifÖzgeOlgaç-Lists.ipynb",
+      "name": "Lists.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/elfozge/data_science_bootcamp/blob/main/Lists.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -97,7 +86,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f1efa384-c842-41eb-c463-05f27f01ad80"
+        "outputId": "08d987de-5ca8-4a0c-d561-2ff03aa74e0a"
       },
       "source": [
         "names = [\"David\", \"Michael\", \"John\", \"James\", \"Greg\", \"Mark\", \n",
@@ -116,8 +105,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Karen\n",
-            "Score of Karen is 90 \n"
+            "David\n",
+            "Score of David is 95 \n"
           ],
           "name": "stdout"
         }
@@ -174,7 +163,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12d5808e-3311-4115-ea2a-fe84ba4a2f1f"
+        "outputId": "2bb96eaf-f876-4bda-e5a6-ad75ebd48613"
       },
       "source": [
         "months = [['January', 31], ['February', 28], ['March', 31], ['April', 30], ['May', 31], ['June', 30], ['July', 31], ['August', 31], ['September', 30], ['October', 31], ['November', 30], ['December', 31]]\n",
@@ -207,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16879390-7de6-4917-e60b-5f83ea9376db"
+        "outputId": "ac6bcf3b-3ca9-4391-ee29-1b24326d5a37"
       },
       "source": [
         "spring = months[2:5]\n",
@@ -249,17 +238,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba48defe-2818-4b90-c217-2152cad8a1c3"
+        "outputId": "696f0a5a-f611-4694-c460-4e234337d66c"
       },
       "source": [
-        "print(\"Summer lasts {} days.\".format(sum(c[1] for c in summer)))"
+        "print(\"Summer lasts {} days.\".format(sum(c[1] for c in summer)))\n",
+        "\n",
+        "print(\"--\"*10)\n",
+        "\n",
+        "summer_length = summer[0][1] + summer[1][1] + summer[2][1]\n",
+        "print(\"Summer lasts {} days\".format(summer_length))"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Summer lasts 92 days.\n"
+            "Summer lasts 92 days.\n",
+            "--------------------\n",
+            "Summer lasts 92 days\n"
           ],
           "name": "stdout"
         }
